2010-02-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: added
	  selection check.

2010-02-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Fixed
	  'Bug 582050 - Cannot see selection while search box is
	  visible, even if editor has focus'

2010-02-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: BOM is now
	  remembered.

2010-02-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Add
	  command handlers for RecenterEditor and TransposeCharacters.

2010-02-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/IdeViMode.cs: Missed file in
	  previous commit.

2010-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Track API
	  changes.

2010-02-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Improved
	  keyboard navigation in search & replace widget.

2010-02-22  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs:
	  Fixed 'Bug 581629 - Search and replace should not trim the
	  search/replace term'.

2010-02-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Worked
	  on search & replace.

2010-02-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Worked
	  on search & replace.

2010-02-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs: